@@ -19,7 +19,7 @@ export(AE3, ab, allele.recode, a2g, asplot,
    invlogit, invnormal,
    KCC, k, klem, kin.morgan,
    LD22, LDkl, logit, log10p,
-   METAL_forestplot, m2plem, makeped, masize, metap, metareg, mhtplot, mhtplot2, mht.control,
+   METAL_forestplot, m2plem, makeped, masize, metap, metareg, mhtplot, mhtplot2, mhtplot.trunc, mht.control,
         mia, miamiplot, micombine, mtdt, mtdt2, muvar, mvmeta,
    PARn, pbsize, pbsize2, pedtodot, pfc, pfc.sim, pgc, plem2m, plot.hap.score, print.hap.score,
    qqfun, qqunif,
